--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                 patterns
                                 over
                                 cites across the country.
-                                <br>&nbsp; As an intern, I have learned practical skills, such as working on
+                                <br>&nbsp; As an intern, I have learned both technical and practical skills, such as working on
                                 teams and thriving in a corporate setting.
                                 <br>
                                 &nbsp;I provide quality work with an attention to detail and and
@@ -133,12 +133,12 @@
                     <div class="card">
                         <div class="card-body">
                             <h3>Technical Intern</h3>
-                            <h4>ManTech</h4>
+                            <h4>MANTECH</h4>
                             <h5>Stafford, VA</h5>
                             <h6><em>May 2023 - Present</em></h6>
                             <p class="card-text">
                             <ul>
-                                <li>LeveragedBlender, Unreal Engine 5, virtual reality, and 3D printing to create an
+                                <li>Leveraged Blender, Unreal Engine 5, virtual reality, and 3D printing to create an
                                     immersive virtual reality training program
                                     for Marines.</li>
                                 <li>Trained to assist in assembling, planning, and piloting unmanned aerial systems
@@ -147,7 +147,7 @@
                                     and reconnaissance drills.</li>
                                 <li>Iteratively designed and revised three dimensional designs to be printed and used
                                     for
-                                    projects, experiments, and valuegenerating activities.</li>
+                                    projects, experiments, and value-generating activities.</li>
                             </ul>
                             </p>
                         </div>
@@ -228,7 +228,7 @@
 
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4 d-flex">
                     <div class="card">
-                        <img src="images/tui.png" class="card-img-top" alt="Project photo">
+                        <img src="images/tui.png" class="card-img-top" alt="Spreadsheet Project photo">
                         <div class="card-body">
                             <h4>Embedded Programming Language Spreadsheet</h4>
                             <h5>Ruby</h5>
@@ -240,6 +240,25 @@
                                 <li>Developed a dynamic spreadsheet application with a GUI using this language.</li>
                                 <li>Enabled cell value storage, formula computation, and state persistence between
                                     dependent cells.</li>
+                            </ul>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Add link to Shop-Buddy -->
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4 d-flex">
+                    <div class="card">
+                        <img src="images/shop-buddy-square.png" class="card-img-top" alt="Shop-Buddy user interface">
+                        <div class="card-body">
+                            <h4>Shop-Buddy</h4>
+                            <h5>JavaScript, HTML, CSS, Bootstrap</h5>
+                            <h6><em>Spring 2025</em></h6>
+                            <p class="card-text">
+                            <ul>
+                                <li>Interactive online shopping user interface.</li>
+                                <li>Fetches products from a database and stores persistent data using CRUD.</li>
+                                <li>Creates a print-friendly shopping list from the user's shopping cart.</li>
                             </ul>
                             </p>
                         </div>
@@ -286,29 +305,25 @@
                     </div>
                 </div>
 
-                <!-- Add link to Shop-Buddy -->
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4 d-flex">
-                    <div class="card">
-                        <img src="images/shop-buddy-square.png" class="card-img-top" alt="Shop-Buddy user interface">
-                        <div class="card-body">
-                            <h4>Shop-Buddy</h4>
-                            <h5>JavaScript, HTML, CSS, Bootstrap</h5>
-                            <h6><em>Spring 2025</em></h6>
-                            <p class="card-text">
-                            <ul>
-                                <li>Interactive online shopping user interface.</li>
-                                <li>Fetches products from a database and stores persistent data using CRUD.</li>
-                                <li>Creates a print-friendly shopping list from the user's shopping cart.</li>
-                            </ul>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
             </div>
         </div>
     </section>
 
+    <div class="container-fluid py-5">
+        <div class="card mx-auto text-center" style="max-width: 800px;">
+            <div class="card-body">
+                <h3 class="card-title">Projects in the works:</h3>
+                <p class="card-text">
+                <ul style="list-style: none;">
+                    <li>Graphics renderers (Typescript)</li>
+                    <li>Ranked-choice voting election simulator (Java)</li>
+                    <li>This website (HTML, CSS, Bootstrap)</li>
+                    <li>Even more, soon!</li>
+                </ul>
+                </p>
+            </div>
+        </div>
+    </div>
 
 
 </body>
