--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                             <h3>Technical Intern</h3>
                             <h4>MANTECH</h4>
                             <h5>Stafford, VA</h5>
-                            <h6><em>May 2023 - Present</em></h6>
+                            <h6><em>May 2024 - Present</em></h6>
                             <p class="card-text">
                             <ul>
                                 <li>Leveraged Blender, Unreal Engine 5, virtual reality, and 3D printing to create an
@@ -177,7 +177,7 @@
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4 d-flex">
                     <div class="card">
                         <div class="card-body">
-                            <h3>Competitive Programmer</h3>
+                            <h3>Secretary</h3>
                             <h4>JMU Competitive Programming Club</h4>
                             <h5>Harrisonburg, VA</h5>
                             <h6><em>August 2023 - Present</em></h6>
