Sync resume bulletpoints with website

--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
                                 patterns
                                 over
                                 cites across the country.
-                                <br>&nbsp; As an intern, I have learned both technical and practical skills, such as working on
+                                <br>&nbsp; As an intern, I have learned both technical and practical skills, such as
+                                working on
                                 teams and thriving in a corporate setting.
                                 <br>
                                 &nbsp;I provide quality work with an attention to detail and and
@@ -187,7 +188,9 @@
                                 </li>
                                 <li>Write elegant code under stress and time constraints, emphasizing algorithmic
                                     efficiency.</li>
-                                <li>Continuously refine coding skills and creativity using peer feedback and advice.
+                                <li>Led and mentored teammates in coding competitions by advising, debugging, and
+                                    clarifying complex concepts to enhance
+                                    team performance.
                                 </li>
                             </ul>
                             </p>
@@ -206,7 +209,7 @@
                             <ul>
                                 <li>Lead prospective students and their families on tours of the JMU campus.</li>
                                 <li>Provide helpful and insightful guidance to students on the tours.</li>
-                                <li>Effectively communicate with, and lead team members.</li>
+                                <li>Effectively communicate and respond to problems as they arise.</li>
                             </ul>
                             </p>
                         </div>
@@ -298,7 +301,8 @@
                                 <li>A complex movie-review-based social media website.</li>
                                 <li>Users can create customized profiles, review movies, interact with other profiles,
                                     and see other's reviews.</li>
-                                <li>Stores and fetches data from multiple databases.</li>
+                                <li>Stores and fetches data from multiple databases using a REST API to complete CRUD
+                                    operations.</li>
                             </ul>
                             </p>
                         </div>
